@@ -1,20 +1,21 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 66d4daddd0163539f19e2cb783fc3bb9 *configure
-cad112e8e53af0dfd84b3ee1edf2f9f7 *DESCRIPTION
-5d7e1654f28529d30baa213124b50051 *inst/NEWS.Rd
+e4f192045f31abaae6a78b330564e104 *DESCRIPTION
+3fb9091ea3115fd1f3e6b4c6d1ad7475 *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
 6375b9e30533e0495b98f4b5b829706b *man/charToFact.Rd
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
 d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
 1cce4277e2dd16a0f68c96d744b7bc17 *man/funique.Rd
-3e0b7c90f2f4a9c4be404cbc6ac69b16 *man/iif.Rd
+6413194a5cd625c7d76e4998d102fb52 *man/iif.Rd
 578fe4903cc4f5d7bc5a6f346be1e9e9 *man/nif.Rd
 ef4ce6330a0f6a2ec63ccfd365729963 *man/psort.Rd
 d4128b3f90218c0efd0d4bbf0f84d6a5 *man/psum.Rd
 14e3add07190fd18d0161f4f0b0b5257 *man/setlevels.Rd
+a137f7855b41b074e2babaf8a1562551 *man/shareData.Rd
 54f91d543a10f8c9aef7082da2b86de7 *man/topn.Rd
 3c628c2a27764ec5df2b4980921c310f *man/vswitch.Rd
-8960e9e411b8ff99c638d49e3f28e334 *NAMESPACE
+640100c58f36cf06c14aacd7ff7a946a *NAMESPACE
 19399951b4286b1a9a9f4a251253f84d *R/call.R
 34ba4d931a5bd0ba120ddef7e5327313 *README.md
 4826023c3ffe528db5e2af5db2a84b5a *src/dup.c
@@ -32,5 +33,5 @@ ab9528d1b24d71ed2080743331b8a012 *src/psort.c
 e998e820fea6aa677e78a8cb1f7ba74c *src/topn.c
 c0f3fe6fca4e8492277a0d5f87528ce5 *src/utils.c
 3476a1e2381bb86f68a72844ee61bc7b *src/vswitch.c
-092d4c3684b495e9ad9893edc0e3d902 *tests/test_kit.R
-01a3842d38b306d2bf9286e2c6e5282a *tests/test_kit.Rout.save
+010429797d86eda96db95a459823d629 *tests/test_kit.R
+cb2f4f0290154a7a8525b3bfb3a812e3 *tests/test_kit.Rout.save
