@@ -76,9 +76,9 @@ Attaching kit 0.0.8 (OPENMP enabled using 1 thread)
 > nswitch     = kit::nswitch
 > psort       = kit::psort
 > charToFact  = kit::charToFact
-> shareData   = kit:::shareData
-> getData     = kit:::getData
-> clearData   = kit:::clearData
+> shareData   = kit::shareData
+> getData     = kit::getData
+> clearData   = kit::clearData
 > 
 > # --------------------------------------------------------------------------------------------------
 > #                                   topn 
@@ -1696,4 +1696,4 @@ Attaching kit 0.0.8 (OPENMP enabled using 1 thread)
 > 
 > proc.time()
    user  system elapsed 
-  4.250   0.636   5.027 
+  4.169   0.504   4.671 
